- added loader::app_model('subfolder/model_name')  global directory sub folder load support
- added loader::model('subfolder/model_name')  local directory sub folder load support (thanks to Cj Lazell good idea)
- added ob_query_timer_start() and ob_query_timer_end() functions to DB class for profiling.
- added some codeigniter database result functions result() result_array(); to DB class.

//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!

@todo .. add to user guide php5 method chaining support like this 
echo agent::instance()
->init()
->browser();

echo calendar::instance()
->init()
->generate(2006, 10);


@todo .. look log_message(); some functions does not work.
@todo .. Add Form_controller (Global) tutorial to user guide .. create a directory called /forms
then create a Form_controller to /parents folder. add common functions to Form controller.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 
(CJ Lazell advices)

@todo .. add MY_model extend support .. http://content.screencast.com/users/brainyone/folders/Jing/media/d117e9a2-8200-43df-87e2-69cd7f46fda0/00001286.png
http://www.screencast.com/users/brainyone/folders/Jing/media/74c76098-3b12-43f6-843f-d3e5d1936ec8
@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules ..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. add to GC Map (application flow chart) to web site.                                       
@todo .. session database sql SET userdata field CHARACTER as utf8 into user_guide
CREATE TABLE `ob_sessions` (