@@ -71,7 +71,8 @@ updated config.php file base_url and source_url items.
 - added loader::model('subfolder/model_name')  local directory sub folder load support (thanks to Cj Lazell good idea)
 - added ob_query_timer_start() and ob_query_timer_end() functions to DB class for profiling.
 - added some codeigniter database result functions result() result_array(); to DB class.
-
+- added default fetch object support to $this->db->fetch(); and $this->db->fetch_all(); functions. forexample $this->db->fetch(); func.
+fetch data as object by default. $this->db->fetch(assoc); fetch data as associative array().
 //-----------------------------------------------------------------------------
 
 !!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!
